cg_cfg/OpenSSL/7f0a8dc/bug_trace/traces/bug_387.txt
/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/asn1/tasn_dec.c:587: error: DEAD_STORE
  The value written to &len (type long) is never used.
Showing all 1 steps of the trace


/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/asn1/tasn_dec.c:587:17: Write of unused value
585.                       goto err;
586.                   }
587.                   len -= p - q;
                       ^
588.                   sk_eoc = 0;
589.                   break;
